Changes for Netlify

--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                     <h2>Escríbenos</h2>
                     <p>En CreditoAndino queremos escuchar más sobre ti. Danos tu opinión, dinos que necesitas y uno de nuestros agentes se comunicara contigo.</p>
                 </div>
-                <form name="contact" action="thank-you.html">
+                <form name="contact" action="thank-you.html" method="POST" netlify>
                     <div class="row list-input">
                         <div class="col-md-6 mr0">
                             <div class="single-get-touch">
@@ -184,7 +184,7 @@
                         </div>
                         <div class="form-widget">
                             <p>Entérate de nuestras ofertas y lanzamientos exclusivos</p>
-                            <form name="newsletter" action="thank-you.html">
+                            <form name="newsletter" action="thank-you.html" method="POST" netlify>
                                 <div class="newsletter">
                                     <label for="envalope" class="fa fa-envelope"></label>
                                     <input id="envalope" type="email" name="email" placeholder="Correo electrónico">
