--- a/formulariocredito.html
+++ b/formulariocredito.html
@@ -113,7 +113,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
-                    <form name="credito" action="thank-you.html">
+                    <form name="credito" action="thank-you.html" method="POST" netlify>
                         <div class="row list-input">
                             <div class="col-md-6 mr0">
                                 <div class="single-get-touch">
@@ -290,7 +290,7 @@
                         </div>
                         <div class="form-widget">
                             <p>Entérate de nuestras ofertas y lanzamientos exclusivos</p>
-                            <form name="newsletter" action="thank-you.html">
+                            <form name="newsletter" action="thank-you.html" method="POST" netlify>
                                 <div class="newsletter">
                                     <label for="envalope" class="fa fa-envelope"></label>
                                     <input id="envalope" type="email" name="email" placeholder="Correo electrónico">
