--- a/politica.html
+++ b/politica.html
@@ -199,7 +199,7 @@
                         </div>
                         <div class="form-widget">
                             <p>Entérate de nuestras ofertas y lanzamientos exclusivos</p>
-                            <form name="newsletter" action="thank-you.html">
+                            <form name="newsletter" action="thank-you.html" method="POST" netlify>
                                 <div class="newsletter">
                                     <label for="envalope" class="fa fa-envelope"></label>
                                     <input id="envalope" type="email" name="email" placeholder="Correo electrónico">
