--- a/formulariocredito.html
+++ b/formulariocredito.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="CreditoAndino - La manera más rápida de obtener el crédito que necesitas.">
-    <meta name="keywords" content="Prestamos, Prestamos rapidos, Prestamos de libre inversion, credito hipotecario, credito veloz, prestamo fácil">
+    <meta name="keywords" content="Préstamos, Préstamos rapidos, Préstamos de libre inversion, credito hipotecario, credito veloz, préstamo fácil">
     <link rel="icon" href="asset/img/favicon.png" type="image/gif">
     <title>CreditoAndino - Tu dinero en 72 horas</title>
     <!-- Bootstrap CSS -->
@@ -88,7 +88,7 @@
                                 <li><a href="index.html#FAQ">Preguntas Frecuentes</a></li>
                                 <li><a href="#">Servicios</a>
                                     <ul>
-                                        <li><a href="formulariocredito.html">Crédito de libre inversión con garantía</a></li>
+                                        <li><a href="formulariocredito.html">Crédito de libre inversión con hipoteca</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
