--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="CreditoAndino - La manera más rápida de obtener el crédito que necesitas.">
-    <meta name="keywords" content="Prestamos, Prestamos rapidos, Prestamos de libre inversion, credito hipotecario, credito veloz, prestamo fácil">
+    <meta name="keywords" content="Préstamos, Préstamos rapidos, Préstamos de libre inversion, credito hipotecario, credito veloz, préstamo fácil">
     <link rel="icon" href="asset/img/favicon.png" type="image/gif">
     <title>CreditoAndino - Tu dinero en 72 horas</title>
     <!-- Bootstrap CSS -->
@@ -89,7 +89,7 @@
                                 <li><a href="#FAQ">Preguntas Frecuentes</a></li>
                                 <li><a href="#">Servicios</a>
                                     <ul>
-                                        <li><a href="formulariocredito.html">Crédito de libre inversión con garantía</a></li>
+                                        <li><a href="formulariocredito.html">Crédito de libre inversión con hipoteca</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
@@ -111,7 +111,7 @@
                             <div class="col-md-12 text-center">
                                 <div class="main-slider-welcome-text">
                                     <div class="slider-cell">
-                                        <h2 class="sub-title" data-animation-in="fadeInRight" data-animation-out="animate-out fadeOutRIght">Crédito de libre inversión con garantia</h2>
+                                        <h2 class="sub-title" data-animation-in="fadeInRight" data-animation-out="animate-out fadeOutRIght">Crédito de libre inversión con hipoteca</h2>
                                         <h2 class="main-title" data-animation-in="fadeInLeft" data-animation-out="animate-out fadeOutLeft">La manera más rapida de obtener el dinero que necesitas.</h2>
                                         <div class="welcome-button" data-animation-in="fadeInDown" data-animation-out="animate-out fadeOutDown">
                                             <a href="formulariocredito.html" class="btn btn-default button-primary">¡PIDE TU CREDITO!</a>
@@ -133,7 +133,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>¿Como funciona?</h2>
-                        <p>Estamos seguros: pedir un prestamo no deberia ser complciado. En CreditoAndino puedes obtener creditos de libre inversión con garantia rapidamente, con condiciones claras y a tasas competitivas. CreditoAndino está optimizado y es automático: el uso de esta plataforma en línea permite reducir los costos de los servicios de oficina y transacción y, por lo tanto, ofrecer a nuestross clientes mayor velocidad, mejor servicio y términos más favorables.</p>
+                        <p>Estamos seguros: pedir un prestamo no deberia ser complciado. En CreditoAndino puedes obtener creditos de libre inversión con hipoteca rapidamente, con condiciones claras y a tasas competitivas. CreditoAndino está optimizado y es automático: el uso de esta plataforma en línea permite reducir los costos de los servicios de oficina y transacción y, por lo tanto, ofrecer a nuestross clientes mayor velocidad, mejor servicio y términos más favorables.</p>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                         </div>
                         <div class="content">
                             <h4 class="process-title">hasta un 30%</h4>
-                            <p>El valor que prestamos sobre el costo du tu casa</p>
+                            <p>El valor que Préstamos sobre el costo du tu casa</p>
                         </div>
                     </div>
                 </div>
