--- a/politica.html
+++ b/politica.html
@@ -15,6 +15,15 @@
     <link rel="stylesheet" type="text/css" href="asset/css/reset.css">
     <link rel="stylesheet" type="text/css" href="asset/css/style.css">
     <link rel="stylesheet" type="text/css" href="asset/css/responsive.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118438453-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-118438453-1');
+    </script>
     <<!-- Facebook Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
