forms and links

--- a/index.html
+++ b/index.html
@@ -513,9 +513,9 @@
                     </div>
                 </div>
                 <div class="col-md-6 text-right">
-                    <div class="footer-nave">
-                        <a href="#"><i class="fa fa-facebook-square"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                    <<div class="footer-nave">
+                        <a href="https://www.facebook.com/CreditoAndino-1503888016400695/"><i class="fa fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com/creditoandino/"><i class="fa fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
