--- a/formularioavaluo.html
+++ b/formularioavaluo.html
@@ -84,7 +84,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
-                    <form name="avaluo" action="#">
+                    <form name="avaluo" method="POST" netlify>
                         <div class="row list-input">
                             <div class="col-md-6">
                                 <div class="single-get-touch">
@@ -279,8 +279,8 @@
                 </div>
                 <div class="col-md-6 text-right">
                     <div class="footer-nave">
-                        <a href="#"><i class="fa fa-facebook-square"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/CreditoAndino-1503888016400695/"><i class="fa fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com/creditoandino/"><i class="fa fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
