--- a/formularioavaluo.html
+++ b/formularioavaluo.html
@@ -77,8 +77,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
-                        <h2>Responde las preguntas a continuación para descubrir el verdadero valor de tu casa.</h2>
-                        <h3>Nuestros algoritmo realiza el estudio en menos de un minuto.</h3>
+                        <h2>Gracias por responder las preguntas a continuación, cada vez estas más cerca de obtener el dinero que necesitas.</h2>
                     </div>
                 </div>
             </div>
