--- a/formularioavaluo.html
+++ b/formularioavaluo.html
@@ -77,7 +77,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
-                        <h2>Gracias por responder las preguntas a continuación, cada vez estas más cerca de obtener el dinero que necesitas.</h2>
+                        <h2>Gracias por responder las preguntas a continuación.</h2>
+                        <h3>Cada vez estas más cerca de obtener el dinero que necesitas.</h3>
                     </div>
                 </div>
             </div>
