--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>¿Como funciona?</h2>
-                        <p>Estamos seguros: pedir un prestamo no deberia ser complciado. En CreditoAndino puedes obtener creditos de libre inversión con hipoteca rapidamente, con condiciones claras y a tasas competitivas. CreditoAndino está optimizado y es automático: el uso de esta plataforma en línea permite reducir los costos de los servicios de oficina y transacción y, por lo tanto, ofrecer a nuestross clientes mayor velocidad, mejor servicio y términos más favorables.</p>
+                        <p>Estamos seguros: pedir un prestamo no deberia ser complicado. En CreditoAndino puedes obtener creditos de libre inversión con hipoteca rapidamente, con condiciones claras y a tasas competitivas. CreditoAndino está optimizado y es automático: el uso de esta plataforma en línea permite reducir los costos de los servicios de oficina y transacción y, por lo tanto, ofrecer a nuestross clientes mayor velocidad, mejor servicio y términos más favorables.</p>
                     </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                 <div class="col-md-8 text-center">
                     <div class="get-consultation-content">
                         <h4>TU DINERO EN TRES DÍAS</h4>
-                        <h2>Completa el formulario y uno de nuestros agentes se comunicara contigo.</h2>
+                        <h2>Completa el formulario y uno de nuestros agentes se comunicará contigo.</h2>
                         <a href="formulariocredito.html" class="button btn btn-default btn-sm">INICIAR</a>
                     </div>
                 </div>
