Changes to improve credibility.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <!-- start header area -->
     <section class="main-slider-area">
         <div class="active-main-slider owl-carousel">
-            <div class="main-slider-item" style="background-image: url(asset/img/HomeBanner1.jpg);">
+            <div class="main-slider-item" style="background-image: url(asset/img/HomeBanner2.jpg);">
                 <div class="slider-one-content">
                     <div class="container">
                         <div class="row">
@@ -121,7 +121,7 @@
                                 <div class="main-slider-welcome-text">
                                     <div class="slider-cell">
                                         <h2 class="sub-title" data-animation-in="fadeInRight" data-animation-out="animate-out fadeOutRIght">Crédito de libre inversión con hipoteca</h2>
-                                        <h2 class="main-title" data-animation-in="fadeInLeft" data-animation-out="animate-out fadeOutLeft">La manera más rapida de obtener el dinero que necesitas.</h2>
+                                        <h2 class="main-title" data-animation-in="fadeInLeft" data-animation-out="animate-out fadeOutLeft">Tu dinero en 72 horas y con tasas desde el 1% mensual.</h2>
                                         <div class="welcome-button" data-animation-in="fadeInDown" data-animation-out="animate-out fadeOutDown">
                                             <a href="formulariocredito.html" class="btn btn-default button-primary">¡PIDE TU CREDITO!</a>
                                         </div>
@@ -190,8 +190,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <div class="get-consultation-content">
-                        <h4>TU DINERO EN TRES DÍAS</h4>
-                        <h2>Completa el formulario y uno de nuestros agentes se comunicará contigo.</h2>
+                        <h4>Desde 12 a 240 meses con tasas del 1% mensual</h4>
+                        <h2>Completa el formulario y uno de nuestros agentes se estará comunicando contigo.</h2>
                         <a href="formulariocredito.html" class="button btn btn-default btn-sm">INICIAR</a>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                         </div>
                         <div class="content">
                             <h4 class="process-title">240 MESES</h4>
-                            <p>El tiempo máximo para pagar el crédito</p>
+                            <p>El tiempo máximo para pagar tu crédito</p>
                         </div>
                     </div>
                 </div>
@@ -258,52 +258,59 @@
         </div>
     </section>
     <!-- end of loan process section -->
-    <!-- start testimonial section -->
-    <section class="testimonial-section section-padding">
+
+    <!-- start latest article section -->
+    <section class="latest-article-section section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
-                        <h2>Historias</h2>
-                        <p>Descubre lo que algunos de nuestros clientes dicen de su experiencia con CreditoAndino</p>
+                        <h2>Artículos seleccionados</h2>
+                        <p>Información escrita por nuestros especialistas para ayudarte a tomar la mejor decisión</p>
                     </div>
                 </div>
-                <div class="testimonial-slider owl-carousel">
-                    <div class="single-testimonial">
-                        <div class="testimonial-img">
-                            <img src="asset/img/testimonial.jpg" alt="" />
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="single-article">
+                        <div class="article-img">
+                            <a href="13senalesblog.html"><img src="asset/img/blog13razones.jpg" alt="" /></a>
+                            <div class="article-date">
+                                <p>Mayo 21, 2018</p>
+                            </div>
                         </div>
-                        <div class="testimonial-content">
-                            <h4>Sebastián López</h4>
-                            <h5>Indepediente</h5>
-                            <p>“Con CreditoAndino pude comprar el equipo que necesitaba para montar mi propio negocio.”</p>
-                        </div>
+                        <a href="13senalesblog.html"><h2>11 señales de que es hora de pedir un crédito</h2></a>
                     </div>
-                    <div class="single-testimonial">
-                        <div class="testimonial-img">
-                            <img src="asset/img/testimonial-1.jpg" alt="" />
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="single-article">
+                        <div class="article-img">
+                            <a href="prestamogarantiablog.html"><img src="asset/img/blogprestamogarantia.jpg" alt="" /></a>
+                            <div class="article-date">
+                                <p>Mayo 5, 2018</p>
+                            </div>
                         </div>
-                        <div class="testimonial-content">
-                            <h4>Mariana Ortíz</h4>
-                            <h5>Publicidad y Mercadeo</h5>
-                            <p>“El proceso con CreditoAndino fue bastante fácil y rápido, en menos de tres días ya tenia el dinero que necesitaba para pagar mi universidad.”</p>
-                        </div>
+                        <a href="restamogarantiablog.html">
+                            <h2>Prestamo con garantia: La manera más fácil de obtener un crédito</h2></a>
                     </div>
-                    <div class="single-testimonial">
-                        <div class="testimonial-img">
-                            <img src="asset/img/testimonial-2.jpg" alt="" />
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="single-article">
+                        <div class="article-img">
+                            <a href="refinanciarblog.html"><img src="asset/img/blogrefinanciar.jpg" alt="" /></a>
+                            <div class="article-date">
+                                <p>Abril 25, 2018</p>
+                            </div>
                         </div>
-                        <div class="testimonial-content">
-                            <h4>Catalina & Jaime</h4>
-                            <h5>Padres de familia</h5>
-                            <p>“Gracias a CreditoAndino pudimos usar nuestro apartamento para pedir un préstamo y remodelar el cuarto de nuestra hija.”</p>
-                        </div>
+                        <a href="refinanciarblog.html">
+                            <h2>Por qué hipotecar tu casa para pagar tus deudas</h2></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- end of testimonial section -->
+    <!-- end of latest article section -->
+
     <!-- end of header area -->
     <div class="page-header">
         <div class="container">
@@ -316,6 +323,84 @@
         </div>
     </div>
     <!-- end of page header -->
+
+    <!-- start testimonial section -->
+    <section class="testimonial-section section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="section-title">
+                        <h2>Historias de nuestros clientes</h2>
+                        <p>Descubre lo que algunos de nuestros clientes dicen de su experiencia con CreditoAndino</p>
+                    </div>
+                </div>
+                <div class="testimonial-slider owl-carousel">
+                    <div class="single-testimonial">
+                        <div class="testimonial-img">
+                            <img src="asset/img/testimonial.jpg" alt="" />
+                        </div>
+                        <div class="testimonial-content">
+                            <h4>Sebastián López</h4>
+                            <h5>Indepediente</h5>
+                            <p>“Con CreditoAndino pude comprar los equipos que necesitaba para montar mi propio negocio.”</p>
+                        </div>
+                    </div>
+                    <div class="single-testimonial">
+                        <div class="testimonial-img">
+                            <img src="asset/img/testimonial-1.jpg" alt="" />
+                        </div>
+                        <div class="testimonial-content">
+                            <h4>Mariana Ortíz</h4>
+                            <h5>Publicidad y Mercadeo</h5>
+                            <p>“El proceso con CreditoAndino fue bastante fácil y rápido, en menos de tres días ya tenia el dinero que necesitaba para pagar mi especialización.”</p>
+                        </div>
+                    </div>
+                    <div class="single-testimonial">
+                        <div class="testimonial-img">
+                            <img src="asset/img/testimonial-2.jpg" alt="" />
+                        </div>
+                        <div class="testimonial-content">
+                            <h4>Catalina y Jaime</h4>
+                            <h5>Padres de familia</h5>
+                            <p>“Gracias a CreditoAndino pudimos usar nuestro apartamento para pedir un préstamo y remodelar el cuarto de nuestra hija.”</p>
+                        </div>
+                    </div>
+                    <div class="single-testimonial">
+                        <div class="testimonial-img">
+                            <img src="asset/img/testimonial-3.jpg" alt="" />
+                        </div>
+                        <div class="testimonial-content">
+                            <h4>Andres</h4>
+                            <h5>Cocinero</h5>
+                            <p>“Con CreditoAndino el restaurante que siempre quise fundar ya no sigue siendo un sueño.”</p>
+                        </div>
+                    </div>
+                    <div class="single-testimonial">
+                        <div class="testimonial-img">
+                            <img src="asset/img/testimonial-4.jpg" alt="" />
+                        </div>
+                        <div class="testimonial-content">
+                            <h4>Juan Carlos Osorio</h4>
+                            <h5>Estudiante administración de empresas.</h5>
+                            <p>“Pagar la universidad siempre es complicado, pero mis papás pudieron utilizar su hogar para darme la carrera que siempre quise tener.”</p>
+                        </div>
+                    </div>
+                    <div class="single-testimonial">
+                        <div class="testimonial-img">
+                            <img src="asset/img/testimonial-5.jpg" alt="" />
+                        </div>
+                        <div class="testimonial-content">
+                            <h4>Manuela</h4>
+                            <h5>Viajera</h5>
+                            <p>“Siempre habia soñado con ir a Tokyo; con CreditoAndino ya estoy próxima a inicar esta aventura.”</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of testimonial section -->
+
     <!-- start customer faq section -->
     <section class="custom-faq section-padding">
         <a name="FAQ"></a>
