--- a/politica.html
+++ b/politica.html
@@ -25,12 +25,13 @@
     {'GTM-NFVD9HM':true});</script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118438453-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-118438453-1');
-      ga('require', 'GTM-NFVD9HM');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-118438453-1', 'auto');
+        ga('require', 'GTM-NFVD9HM');
+        ga('send', 'pageview');
     </script>
     <<!-- Facebook Pixel Code -->
     <script>
