--- a/thank-you.html
+++ b/thank-you.html
@@ -107,7 +107,8 @@
                                 <li><a href="index.html#FAQ">Preguntas Frecuentes</a></li>
                                 <li><a href="#">Servicios</a>
                                     <ul>
-                                        <li><a href="formulariocredito.html">Crédito de libre inversión con hipoteca</a></li>
+                                        <li><a href="formulariocredito.html">Crédito con garantia</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avaluo grátis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
