--- a/formulariocredito.html
+++ b/formulariocredito.html
@@ -105,7 +105,8 @@
                                 <li><a href="index.html#FAQ">Preguntas Frecuentes</a></li>
                                 <li><a href="#">Servicios</a>
                                     <ul>
-                                        <li><a href="formulariocredito.html">Crédito de libre inversión con hipoteca</a></li>
+                                        <li><a href="formulariocredito.html">Crédito con garantia</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avaluo grátis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
@@ -228,7 +229,7 @@
                             </div>
                             <div class="col-md-6">
                                 <p>Estoy de acuerdo con la <a href="politica.html">política de manejo de la información</a></p>
-                                <div class="single-get-check" name="tiempo" required>
+                                <div class="single-get-check" name="politicaaceptar" required>
                                     <label class="radiobox">Si
                                         <input type="checkbox" name="Si" checked="checked">
                                         <span class="checkmark"></span>
