--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                                 <li><a href="#FAQ">Preguntas Frecuentes</a></li>
                                 <li><a href="#">Servicios</a>
                                     <ul>
-                                        <li><a href="formulariocredito.html">Crédito de libre inversión con hipoteca</a></li>
+                                        <li><a href="formulariocredito.html">Crédito con garantia</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avaluo grátis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
@@ -199,8 +200,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <div class="get-consultation-content">
-                        <h4>Desde 12 a 240 meses con tasas del 1% mensual</h4>
-                        <h2>Completa el formulario y uno de nuestros agentes se estará comunicando contigo.</h2>
+                        <h4>¿Sabes el verdadero valor de tu casa?</h4>
+                        <h2>Completa el formulario y recibiras tu avaluo grátis.</h2>
                         <a href="formulariocredito.html" class="button btn btn-default btn-sm">INICIAR</a>
                     </div>
                 </div>
@@ -325,7 +326,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2>PIDE TU CRÉDITO ¿QUÉ ESPERAS?</h2>
+                    <h2>TASAS DESDE EL 1%, PIDE TU CREDITO</h2>
                     <a href="formulariocredito.html" class="button btn btn-default btn-sm">COMPLETAR FORMULARIO</a>
                 </div>
             </div>
