--- a/formularioavaluoprincipal.html
+++ b/formularioavaluoprincipal.html
@@ -108,7 +108,7 @@
                                 <li><a href="#">Servicios</a>
                                     <ul>
                                         <li><a href="formulariocredito.html">Crédito de libre inversión con hipoteca</a></li>
-                                        <li><a href="formularioavaluoprincipal.html">Avaluo grátis</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avaluo gratis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
@@ -120,13 +120,35 @@
         </div>
     </header>
     <!-- end of page header -->
+    <!-- start header area -->
+    <section class="main-slider-area">
+        <div class="active-main-slider owl-carousel">
+            <div class="main-slider-item" style="background-image: url(asset/img/ValorApto.png); height: 400px">
+                <div class="slider-one-content">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="main-slider-welcome-text">
+                                    <div class="slider-cell">
+                                        <h2 class="sub-title">Completamente gratis y en menos de un minuto</h2>
+                                        <h2 class="main-title">El valor de tu casa con un solo click</h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of header area -->
     <section class="section-padding contact-us-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>Gracias por responder las preguntas a continuación.</h2>
-                        <h3>Cada vez estas más cerca de obtener el dinero que necesitas.</h3>
+                        <h3>Con tus respuestas podremos decirte el verdadero valor de tu casa.s.</h3>
                     </div>
                 </div>
             </div>
