--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                                 <li><a href="#">Servicios</a>
                                     <ul>
                                         <li><a href="formulariocredito.html">Crédito con garantia</a></li>
-                                        <li><a href="formularioavaluoprincipal.html">Avaluo grátis</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avaluo gratis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
