--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <li><a href="#">Servicios</a>
                                     <ul>
                                         <li><a href="formulariocredito.html">Crédito con garantia</a></li>
-                                        <li><a href="formularioavaluoprincipal.html">Avaluo grátis</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avaluo gratis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
@@ -201,7 +201,7 @@
                 <div class="col-md-8 text-center">
                     <div class="get-consultation-content">
                         <h4>¿Sabes el verdadero valor de tu casa?</h4>
-                        <h2>Completa el formulario y recibiras tu avaluo grátis.</h2>
+                        <h2>Completa el formulario y recibe tu avaluo gratis.</h2>
                         <a href="formulariocredito.html" class="button btn btn-default btn-sm">INICIAR</a>
                     </div>
                 </div>
